@startuml
title ExtendComplex

[*] --> Start
Next : F
Next --> [*]
Start : A + B + C | D + E
Start --> Next

state A {
    [*] --> Start
    Start --> [*]
}

state B {
    [*] --> Start
    Done --> [*]
    Start --> Done
}

state C {
    [*] --> Start
    End --> [*]
    Start : C1 | C2
    Start --> End
}

state C1 {
    [*] --> Start
    End --> [*]
    Start --> End
}

state C2 {
    [*] --> Start
    Start --> [*]
}

state D {
    [*] --> Start
    Start --> [*]
}

state E {
    [*] --> Start
    End --> [*]
    Start : D + F
    Start --> End
}

state F {
    [*] --> Start
    Start --> [*]
}

@enduml
